tests/dataset/tpc-ds/compiler/c/q20.error
/tmp/TestCCompiler_TPCDS_Goldenq203989579813/001/prog.c: In function ‘test_TPCDS_Q20_revenue_ratio’:
/tmp/TestCCompiler_TPCDS_Goldenq203989579813/001/prog.c:354:20: error: incompatible types when initializing type ‘const char *’ using type ‘tmp_item_t’
  354 |                    (tmp_item_t){.i_item_id = "ITEM2",
      |                    ^
/tmp/TestCCompiler_TPCDS_Goldenq203989579813/001/prog.c:363:54: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  363 |   if (test_TPCDS_Q20_revenue_ratio_result.len != tmp1.len) {
      |                                                      ^
      |                                                      ->
/tmp/TestCCompiler_TPCDS_Goldenq203989579813/001/prog.c:367:63: error: ‘(tmp1_t *)&tmp1’ is a pointer; did you mean to use ‘->’?
  367 |       if (test_TPCDS_Q20_revenue_ratio_result.data[i3] != tmp1.data[i3]) {
      |                                                               ^
      |                                                               ->
/tmp/TestCCompiler_TPCDS_Goldenq203989579813/001/prog.c: In function ‘main’:
/tmp/TestCCompiler_TPCDS_Goldenq203989579813/001/prog.c:431:35: warning: implicit declaration of function ‘class_totals_item_list_t_create’ [-Wimplicit-function-declaration]
  431 |   class_totals_item_list_t tmp9 = class_totals_item_list_t_create(tmp8.len);
      |                                   ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq203989579813/001/prog.c:431:35: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq203989579813/001/prog.c:435:34: warning: implicit declaration of function ‘filtered_item_list_t_create’ [-Wimplicit-function-declaration]
  435 |     filtered_item_list_t tmp11 = filtered_item_list_t_create(_gp.items.len);
      |                                  ^~~~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq203989579813/001/prog.c:435:34: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq203989579813/001/prog.c:459:7: warning: implicit declaration of function ‘result_item_list_t_create’ [-Wimplicit-function-declaration]
  459 |       result_item_list_t_create(filtered.len * class_totals.len);
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~
/tmp/TestCCompiler_TPCDS_Goldenq203989579813/001/prog.c:459:7: error: invalid initializer
/tmp/TestCCompiler_TPCDS_Goldenq203989579813/001/prog.c:517:41: error: incompatible types when assigning to type ‘list_int’ from type ‘result_item_list_t’
  517 |   test_TPCDS_Q20_revenue_ratio_result = result;
      |                                         ^~~~~~
