tests/dataset/tpc-ds/compiler/c/q20.c
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:37Z
// Generated by Mochi compiler v0.10.26 on 2025-07-15T06:30:37Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static double _sum_float(list_float v) {
  double sum = 0;
  for (int i = 0; i < v.len; i++)
    sum += v.data[i];
  return sum;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  int key;
  list_int items;
} _GroupInt;
typedef struct {
  int len;
  int cap;
  _GroupInt *data;
} list_group_int;
static list_group_int _group_by_int(list_int src) {
  list_group_int res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    int key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (res.data[j].key == key) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data = (_GroupInt *)realloc(res.data, sizeof(_GroupInt) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupInt *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = src.data[i];
  }
  return res;
}
typedef struct CatalogSale CatalogSale;
typedef struct Item Item;
typedef struct DateDim DateDim;

typedef struct {
  const char *i_item_id;
  const char *i_item_desc;
  const char *i_category;
  const char *i_class;
  double i_current_price;
  double itemrevenue;
  double revenueratio;
} tmp1_t;
typedef struct {
  int len;
  tmp1_t *data;
} tmp1_list_t;
tmp1_list_t create_tmp1_list(int len) {
  tmp1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *i_item_id;
  const char *i_item_desc;
  const char *i_category;
  const char *i_class;
  double i_current_price;
  double itemrevenue;
  double revenueratio;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int cs_item_sk;
  int cs_sold_date_sk;
  double cs_ext_sales_price;
} catalog_sale_t;

typedef struct {
  int i_item_sk;
  const char *i_item_id;
  const char *i_item_desc;
  const char *i_category;
  const char *i_class;
  double i_current_price;
} item_t;

typedef struct {
  int d_date_sk;
  const char *d_date;
} date_dim_t;

typedef struct {
  int i_item_id;
  int i_item_desc;
  int i_category;
  int i_class;
  int i_current_price;
  double itemrevenue;
} filtered_item_t;
typedef struct {
  int len;
  filtered_item_t *data;
} filtered_item_list_t;
filtered_item_list_t create_filtered_item_list(int len) {
  filtered_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(filtered_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int class;
  double total;
} class_totals_item_t;
typedef struct {
  int len;
  class_totals_item_t *data;
} class_totals_item_list_t;
class_totals_item_list_t create_class_totals_item_list(int len) {
  class_totals_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(class_totals_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int i_item_id;
  int i_item_desc;
  int i_category;
  int i_class;
  int i_current_price;
  double itemrevenue;
  double revenueratio;
} result_item_t;
typedef struct {
  int len;
  result_item_t *data;
} result_item_list_t;
result_item_list_t create_result_item_list(int len) {
  result_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(result_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct CatalogSale {
  int cs_item_sk;
  int cs_sold_date_sk;
  double cs_ext_sales_price;
} CatalogSale;
typedef struct {
  int len;
  catalog_sale_t *data;
} catalog_sale_list_t;
catalog_sale_list_t create_catalog_sale_list(int len) {
  catalog_sale_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(catalog_sale_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct Item {
  int i_item_sk;
  char *i_item_id;
  char *i_item_desc;
  char *i_category;
  char *i_class;
  double i_current_price;
} Item;
typedef struct {
  int len;
  item_t *data;
} item_list_t;
item_list_t create_item_list(int len) {
  item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct DateDim {
  int d_date_sk;
  char *d_date;
} DateDim;
typedef struct {
  int len;
  date_dim_t *data;
} date_dim_list_t;
date_dim_list_t create_date_dim_list(int len) {
  date_dim_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(date_dim_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

static list_int test_TPCDS_Q20_revenue_ratio_result;
static void test_TPCDS_Q20_revenue_ratio() {
  tmp1_t tmp1[] = {(tmp1_t){.i_item_id = "ITEM1",
                            .i_item_desc = "Item One",
                            .i_category = "A",
                            .i_class = "X",
                            .i_current_price = 10.0,
                            .itemrevenue = 600.0,
                            .revenueratio = 66.66666666666667},
                   (tmp_item_t){.i_item_id = "ITEM2",
                                .i_item_desc = "Item Two",
                                .i_category = "A",
                                .i_class = "X",
                                .i_current_price = 20.0,
                                .itemrevenue = 300.0,
                                .revenueratio = 33.333333333333336}};
  int tmp1_len = sizeof(tmp1) / sizeof(tmp1[0]);
  int tmp2 = 1;
  if (test_TPCDS_Q20_revenue_ratio_result.len != tmp1.len) {
    tmp2 = 0;
  } else {
    for (int i3 = 0; i3 < test_TPCDS_Q20_revenue_ratio_result.len; i3++) {
      if (test_TPCDS_Q20_revenue_ratio_result.data[i3] != tmp1.data[i3]) {
        tmp2 = 0;
        break;
      }
    }
  }
  if (!(tmp2)) {
    fprintf(stderr, "expect failed\n");
    exit(1);
  }
}

int main() {
  catalog_sale_t catalog_sales[] = {
      (catalog_sale_t){
          .cs_item_sk = 1, .cs_sold_date_sk = 1, .cs_ext_sales_price = 100.0},
      (catalog_sale_t){
          .cs_item_sk = 1, .cs_sold_date_sk = 1, .cs_ext_sales_price = 200.0},
      (catalog_sale_t){
          .cs_item_sk = 2, .cs_sold_date_sk = 1, .cs_ext_sales_price = 150.0},
      (catalog_sale_t){
          .cs_item_sk = 1, .cs_sold_date_sk = 2, .cs_ext_sales_price = 300.0},
      (catalog_sale_t){
          .cs_item_sk = 2, .cs_sold_date_sk = 2, .cs_ext_sales_price = 150.0},
      (catalog_sale_t){
          .cs_item_sk = 3, .cs_sold_date_sk = 1, .cs_ext_sales_price = 50.0}};
  int catalog_sales_len = sizeof(catalog_sales) / sizeof(catalog_sales[0]);
  item_t item[] = {(item_t){.i_item_sk = 1,
                            .i_item_id = "ITEM1",
                            .i_item_desc = "Item One",
                            .i_category = "A",
                            .i_class = "X",
                            .i_current_price = 10.0},
                   (item_t){.i_item_sk = 2,
                            .i_item_id = "ITEM2",
                            .i_item_desc = "Item Two",
                            .i_category = "A",
                            .i_class = "X",
                            .i_current_price = 20.0},
                   (item_t){.i_item_sk = 3,
                            .i_item_id = "ITEM3",
                            .i_item_desc = "Item Three",
                            .i_category = "D",
                            .i_class = "Y",
                            .i_current_price = 15.0}};
  int item_len = sizeof(item) / sizeof(item[0]);
  date_dim_t date_dim[] = {
      (date_dim_t){.d_date_sk = 1, .d_date = "2000-02-10"},
      (date_dim_t){.d_date_sk = 2, .d_date = "2000-02-20"}};
  int date_dim_len = sizeof(date_dim) / sizeof(date_dim[0]);
  filtered_item_list_t filtered = (filtered_item_list_t){0, NULL};
  filtered_item_list_t tmp4 = create_filtered_item_list(filtered.len);
  int tmp5_data[filtered.len];
  list_int tmp5 = {0, tmp5_data};
  int tmp6 = 0;
  for (int i7 = 0; i7 < filtered.len; i7++) {
    filtered_item_t f = filtered.data[i7];
    tmp4.data[tmp6] = f;
    tmp5.data[tmp6] = f.i_class;
    tmp6++;
  }
  tmp4.len = tmp6;
  tmp5.len = tmp6;
  list_group_int tmp8 = _group_by_int(tmp5);
  class_totals_item_list_t tmp9 = class_totals_item_list_t_create(tmp8.len);
  int tmp10 = 0;
  for (int gi = 0; gi < tmp8.len; gi++) {
    _GroupInt _gp = tmp8.data[gi];
    filtered_item_list_t tmp11 = filtered_item_list_t_create(_gp.items.len);
    for (int i12 = 0; i12 < _gp.items.len; i12++) {
      tmp11.data[i12] = tmp4.data[_gp.items.data[i12]];
    }
    tmp11.len = _gp.items.len;
    struct {
      int key;
      filtered_item_list_t items;
    } g = {_gp.key, tmp11};
    list_float tmp13 = list_float_create(g.items.len);
    int tmp14 = 0;
    for (int i15 = 0; i15 < g.items.len; i15++) {
      filtered_item_t x = g.items.data[i15];
      tmp13.data[tmp14] = x.itemrevenue;
      tmp14++;
    }
    tmp13.len = tmp14;
    tmp9.data[tmp10] =
        (class_totals_item_t){.class = g.key, .total = _sum_float(tmp13)};
    tmp10++;
  }
  tmp9.len = tmp10;
  class_totals_item_list_t class_totals = tmp9;
  result_item_list_t tmp16 =
      result_item_list_t_create(filtered.len * class_totals.len);
  int tmp17 = 0;
  for (int tmp18 = 0; tmp18 < filtered.len; tmp18++) {
    filtered_item_t f = filtered.data[tmp18];
    for (int tmp19 = 0; tmp19 < class_totals.len; tmp19++) {
      class_totals_item_t t = class_totals.data[tmp19];
      if (!(f.i_class == t.class)) {
        continue;
      }
      tmp16.data[tmp17] =
          (result_item_t){.i_item_id = f.i_item_id,
                          .i_item_desc = f.i_item_desc,
                          .i_category = f.i_category,
                          .i_class = f.i_class,
                          .i_current_price = f.i_current_price,
                          .itemrevenue = f.itemrevenue,
                          .revenueratio = (f.itemrevenue * 100.0) / t.total};
      tmp17++;
    }
  }
  tmp16.len = tmp17;
  result_item_list_t result = tmp16;
  printf("[");
  for (int i20 = 0; i20 < result.len; i20++) {
    if (i20 > 0)
      printf(",");
    result_item_t it = result.data[i20];
    printf("{");
    _json_string("i_item_id");
    printf(":");
    _json_int(it.i_item_id);
    printf(",");
    _json_string("i_item_desc");
    printf(":");
    _json_int(it.i_item_desc);
    printf(",");
    _json_string("i_category");
    printf(":");
    _json_int(it.i_category);
    printf(",");
    _json_string("i_class");
    printf(":");
    _json_int(it.i_class);
    printf(",");
    _json_string("i_current_price");
    printf(":");
    _json_int(it.i_current_price);
    printf(",");
    _json_string("itemrevenue");
    printf(":");
    _json_float(it.itemrevenue);
    printf(",");
    _json_string("revenueratio");
    printf(":");
    _json_float(it.revenueratio);
    printf("}");
  }
  printf("]");
  test_TPCDS_Q20_revenue_ratio_result = result;
  test_TPCDS_Q20_revenue_ratio();
  return 0;
}
